--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Our First</string>
+    <string name="app_name">一刻钟</string>
 
     <string name="menu_concern">我的关心</string>
     <string name="menu_collect">我的收藏</string>
@@ -11,4 +11,7 @@
     <string name="my">我的</string>
     <string name="my_works">我的作品</string>
     <string name="set">设置</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
